@@ -16,7 +16,7 @@
 	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.3.2
+	mod_version = 1.3.3
 	mod_loader = Fabric
 	maven_group = net.frozenblock
 	archives_base_name = FrozenLib
